post lab6